--- a/gb/news2007_2.md
+++ b/gb/news2007_2.md
@@ -1,4 +1,15 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>文化艺术</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"></a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"></a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"></a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"></a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/9/n13149573.md#1" target="_blank">美国古典艺术：霍雷肖·格里诺的“乔治·华盛顿像”</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/9/n13149573.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13149643-George-Washington-Horatio-Greenough-700x420-150x120.jpg" align ="left"></a>一座身着长袍与凉鞋、气势威武的华盛顿像，就这样以总统之姿展现在众人面前。他举起右手伸向天际，表示对神的尊敬，而左手则递出一把剑。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月10日 6:00 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/7/n13146224.md#1" target="_blank">天堂梦（150）</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/7/n13146224.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12921185-Heaven--150x120.jpg" align ="left"></a>江西有个叫成克杰的副省长贪污500万元，判死刑枪毙，但他贪的数字还不及刘志军的零头。中共的法律似面团，需要什么捏什么。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月10日 3:00 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/9/n13150533.md#1" target="_blank">新诗：九重葛的盛放</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/9/n13150533.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13150541-ttl7dayFba_93113c4036c4fb47-150x120.jpg" align ="left"></a> 把雨伞忘在红尘 温婉地滤掉记忆杂质 领略苦与涩，终将 融成一片灿烂光华......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月10日 1:05 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/6/n13144342.md#1" target="_blank">高智晟先生家书中讲述的一些早逝的亲人们</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/6/n13144342.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2010/07/808060945321501-150x120.jpg" align ="left"></a>2021年的第一天，耿和在她的推文中，公布了她丈夫高智晟先生在山东的姐姐于2020年5月跳河自杀的噩耗。这是中共法西斯在对高智晟及其亲人的迫害记录上新添的一笔血债。高智晟的姐姐在他七个兄弟姐妹中排行第二…......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月10日 12:12 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/9/n13150356.md#1" target="_blank">青松絮语：海的分界</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/9/n13150356.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2015/05/1409202037062483-150x120.jpg" align ="left"></a>周末，一家人登高观海。
+
+孩子发现一个有趣的现象，靠近海滩的地方海水呈黄色，再往里就变成了碧绿色。我看海时，通常只关注远方海平面与天空交接的地方。若不是孩子提醒，我还真没注意到海水居然有分界。孩子很好奇，想知道为什么。我也在努力思考答案。
+
+今天风浪有些大，靠近岸边的浅水处估计被卷起不少泥沙，所以呈黄色并不奇怪.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月09日 11:00 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/7/24/n13112883.md#1" target="_blank">同罪异罚失公允 春秋贤臣秉公而断</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/7/24/n13112883.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/08/1708100632282357-150x120.jpg" align ="left"></a>春秋时期，宋国司马华弱受到羞辱，没有反抗，结果被宋平公驱逐出境。晋国邢侯和雍子为争土地产权，最后演变为刑案。当这些案件审理结果有失公允，贤臣又是如何论断的呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月09日 7:52 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/6/n13144687.md#1" target="_blank">【未解之谜】为什么你又来到我身边</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/6/n13144687.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13144972-1200x800-150x120.jpg" align ="left"></a>1岁半婴儿说给父亲换过尿布；总吵架的邻居做了农妇的儿子；泰国高僧前世竟是自己舅舅。缘分真神奇。今天给大家介绍三个轮回故事。故事的主人公们虽然天各一方，但却有个共同的特点，就是他们都转生做了身边人的孩子。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月09日 7:00 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/7/30/n13127483.md#1" target="_blank">暗战赤龙（39）雷霆行动</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/7/30/n13127483.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13074103-3581e100e7645b217fe3ddcaf4e33ab4-150x120.jpg" align ="left"></a>没有目击人员，负责保安的武警人员和宾馆负责招待的人，包括厨师都失去记忆，被一种高级神经毒剂摧毁了大脑，公安厅的医学专家也束手无策，不知道这种毒剂的解药。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月09日 3:00 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/8/n13148036.md#1" target="_blank">七绝：“让”字颂</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/8/n13148036.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/09/lotus-1205631_1920-150x120.jpg" align ="left"></a>（一）
 朵云相让三秋爽
@@ -26,18 +37,15 @@
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/7/23/n13108844.md#1" target="_blank">【命理】诱骗妇孺家产 一家十几人皆死</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/7/23/n13108844.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13109091-098e47e18bea873ceef0db2c0a15171c-150x120.jpg" align ="left"></a>话说“人在做，天在看”，天不可欺。宋朝方城人巩固，自以为聪明诱骗邻居老妇周氏的房产家业，赶走他们一家老小，结局一家全遭殃，活生生一个现世报。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月07日 8:52 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/6/n13144341.md#1" target="_blank">诗歌：又见婆罗花开</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/6/n13144341.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13144356-0806-150x120.jpg" align ="left"></a>优昙婆罗花儿开 晶莹剔透神姿彩 孕育祥瑞三千载 法轮圣王救世来......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月07日 12:18 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/2/n13132829.md#1" target="_blank">好蛋成长记—中国娃娃的澳洲故事（3）</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/2/n13132829.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13132818-shutterstock_670129012-150x120.jpg" align ="left"></a>好蛋的幼稚园像个联合国，有当地的澳洲孩子，有纽西兰来的，有印度来的，有美国来的，有韩国来的，有英国来的，有俄国来的，也有像好蛋这样的华裔娃娃。很多孩子是混血儿。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月06日 9:00 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/7/24/n13112797.md#1" target="_blank">病的背后有灵体？古今奇闻揭晓人体秘密</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/7/24/n13112797.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13124313-1803011645242483-150x120.jpg" align ="left"></a>李有甫先生是知名的武术家兼中医师，多年来研究人体科学。1988年到1989年，他曾在中国大陆507所担任中国人体科学研究会研究中心副研究员。不久前，他接受大纪元《珍言真语》节目采访，谈到了一桩奇闻。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月06日 7:51 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/5/n13141850.md#1" target="_blank">【未解之谜】画出天堂的神童</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/5/n13141850.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13141856-1200x800-3-150x120.jpg" align ="left"></a>带着神秘预言出生的神童画家，4岁开始天堂学艺，传递神的信息：至高的圣地在新的地球，下一个文明开启关键是什么？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月06日 7:00 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/6/n13143464.md#1" target="_blank">如何为青少年上大学第一天做准备</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/6/n13143464.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/12/Fotolia_79353894_Subscription_L-150x120.jpg" align ="left"></a>您还记得似乎不久前送孩子去学前班吧，时间一晃而过，现在孩子要步入大学校园了。他们一定会对即将发生的一切感到兴奋，也许有些焦虑，我们整理了一个便捷的清单，来回答您的孩子入学前想要问的问题。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月06日 5:31 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/7/25/n13114513.md#1" target="_blank">【忠义传】张骞两出西域 完成凿空使命</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/7/25/n13114513.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/1-24-150x120.jpg" align ="left"></a>在汉帝国西部的边境，有一条狭长纵深的天然通道，它位于黄河以西，便以“河西走廊”名世。两千多年前，一个以汉人张骞为首的百人使团，第一次从这里走过。张骞用十三年的时间，用脚步丈量出西域范围，勾勒出华夏民族与中、西亚诸国交流的网络。从此，他成了汉朝第一位探索西域，并打通中原与西域联系的传奇人物。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月06日 5:30 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/6/n13143390.md#1" target="_blank">培养孩子的会话技巧：适合3～8岁</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/6/n13143390.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13143455-Fotolia_159227760_Subscription_L-150x120.jpg" align ="left"></a>孩子的会话技巧可以通过培养得到提高，会话技巧对于孩子的成长和幸福至关重要。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月06日 5:14 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/6/n13143127.md#1" target="_blank">学生的精神健康与学习</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/6/n13143127.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13143378-Fotolia_59147652_Subscription_L-150x120.jpg" align ="left"></a>自2020年3月新冠病毒大流行以来，学生们的身心健康和学习已经受到了影响。研究人员表示，新冠病毒的大流行对儿童的精神健康产生了深远的影响。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月06日 4:40 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/6/n13143065.md#1" target="_blank">处理速度可以提高吗？</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/6/n13143065.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13143118-Fotolia_194429409_Subscription_L-150x120.jpg" align ="left"></a>处理速度是一种认知能力，处理速度（或称思维反应）与一个人从接受信息到理解信息并开始做出反应的时间多寡有关，无论是视觉（字母和数字），听觉（语言），还是运动。处理速度慢是指人需要大量时间来吸收、理解和响应信息。那麽如何帮助处理速度慢的孩子？有没有办法提高处理速度？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月06日 3:12 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/7/29/n13125061.md#1" target="_blank">暗战赤龙（38）圆山遇险</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/7/29/n13125061.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13074103-3581e100e7645b217fe3ddcaf4e33ab4-150x120.jpg" align ="left"></a>门外已经传来惊呼声，接着是砸门声，一个保安迅速接近赖局长，似乎要汇报什么，但扬手从袖管里掏出一把匕首，凶狠地向着吴伟光的胸口扎去。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月06日 3:00 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/6/n13142656.md#1" target="_blank">新诗：寄不出的贺年卡</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/6/n13142656.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/1303151046561528-600x400-150x120.jpg" align ="left"></a>穿越牛年，时间继续往前奔驰
-怅然望向一张寄不出去的贺年卡
-无法逆料的命运注入你孱弱胸怀......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月06日 12:43 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/7/30/n13126549.md#1" target="_blank">幼儿感觉统合训练：水中溜滑梯游戏亲子同乐</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/7/30/n13126549.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13141307-shutterstock_1429410437-150x120.jpg" align ="left"></a>有别于在陆地上溜滑梯的单一动作，在水中溜滑梯的姿势会从坐转换为站、趴或失重并找到回平衡，过程中可慢慢加强对身体的控制，有助应对快速的姿势变化，除可让孩子勇于尝试各种运动外，还有助建立自信。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月06日 10:00 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/9/n13150527.md#1" target="_blank">诗歌：难源</a><br></h3>世人如此难，
+共产横瘟疫。
+仇恨恶狂生，
+言行天道逆。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月10日 12:53 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/9/n13150510.md#1" target="_blank">藏头诗：秋后一伏</a><br></h3>秋来风清天高远 后现暑尾热浪翻 一场秋雨一场寒 伏天隐去悄悄然......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月10日 12:45 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/9/n13149699.md#1" target="_blank">七律：立秋</a><br></h3>晴曾持续骄阳炙，
+雨未来时暑热蒸。
+碧叶欣迎甘露雨，
+紫花弥漫奶浆藤。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月09日 5:13 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/8/n13148035.md#1" target="_blank">诗歌：偷闲</a><br></h3>自然开万物，
 雨后浴光辉。
 蝴蝶穿花过，
